--- a/css/fondo_menu.css
+++ b/css/fondo_menu.css
@@ -1,168 +1,123 @@
-
 body {
-    background-image: url(../imagenes/fondo.png);
-    background-position: center top;
-    background-size: 100% auto;
-    padding: 30px;
-    display: inline;
-    
+  background-image: url(../imagenes/fondo.png);
+  background-position: center top;
+  background-size: 100% auto;
+  padding: 30px;
+  display: inline;
 }
-
-body#solucion
-  .contenedor {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    width: 100%;
-    margin: auto;
+body#solucion .contenedor {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
 }
-
-header,
-main,
-footer {
-    /* Funciona como ALTO (height) */
-    flex-basis: 100px;
+header, main, footer {
+ /* Funciona como ALTO (height) */
+  flex-basis: 100px;
 }
-
 main section {
-    display: flex;
+  display: flex;
 }
 #portfolio {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 section div {
-    /* Actua como ANCHO, SI el padre esta en dirección HORIZONTAL. PERO, SI el padre está en dirección VERTICAL, lo toma como ALTO */
-    flex-basis: 50%;
-
-    flex-grow: 1;
-
-    border: 1px solid;
-    padding: 5px;
-
+ /* Actua como ANCHO, SI el padre esta en dirección HORIZONTAL. PERO, SI el padre está en dirección VERTICAL, lo toma como ALTO */
+  flex-basis: 50%;
+  flex-grow: 1;
+  border: 1px solid;
+  padding: 5px;
 }
-
- 
-.container {  display: grid;
-    grid-template-columns: 0.3fr 2.8fr 0.1fr;
-    grid-template-rows: 0.6fr 0.9fr 1.3fr;
-    gap: 0ellos 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". HEADER-CONTAINER ."
-      ". MAINCONTAINER ."
-      ". NUESTRA-MARCA .";
-  }
-  
-  .MAINCONTAINER {  display: grid;
-    grid-template-columns: 1.7fr 0.1fr;
-    grid-template-rows: 1fr 2fr 0.1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". ."
-      ". ."
-      ". .";
-    grid-area: MAINCONTAINER;
-  }
-  
-  .HEADER-CONTAINER {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". . ."
-      ". . ."
-      ". . .";
-    grid-area: HEADER-CONTAINER;
-  }
-  
-  .NUESTRA-MARCA { grid-area: NUESTRA-MARCA; }
-  
-  
-         section {
-             display: grid;
-             grid-template-columns: repeat(4, 25%);
-         }
-  
-         section div {
-             border: 1px solid
-         }
-  
-         #contenedor {
-          display: grid;
-          grid-template-columns: 100%;
-          grid-template-areas:
-          "encabezado"
-          "principal"
-          "publicidad"
-          "pie"
-      }
-  
-      header,
-      main,
-      aside,
-      footer {
-          border: 1px solid
-      }
-  
-      header {
-          grid-area: encabezado;
-          
-      }
-      main {
-          grid-area: principal;
-      }
-      aside {
-          grid-area: publicidad;
-          display: none;
-       }
-       footer {
-           grid-area: pie
-       }
-  
-       footer ul {
-        list-style: none;
-        display:flex;
-      }
-  
-     .MAINCONTAINER {  display: grid;
-      grid-template-columns: 1.7fr 0.1fr;
-      grid-template-rows: 1fr 2fr 0.1fr;
-      gap: 0px 0px;
-      grid-auto-flow: row;
-      grid-template-areas:
-        ". ."
-        ". ."
-        ". .";
-      grid-area: MAINCONTAINER;
-    }
-  
-    .HEADER-CONTAINER {  display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      gap: 0px 0px;
-      grid-auto-flow: row;
-      grid-template-areas:
-        ". . ."
-        ". . ."
-        ". . .";
-      grid-area: HEADER-CONTAINER;
-    }
-  
-    .NUESTRA-MARCA { grid-area: NUESTRA-MARCA; }
-  
-   
-    section {
-        display: grid;
-        grid-template-columns: repeat(4, 25%);
-    }
-  
-    section div {
-        border: 1px solid
-    }
-
+.container {
+  display: grid;
+  grid-template-columns: 0.3fr 2.8fr 0.1fr;
+  grid-template-rows: 0.6fr 0.9fr 1.3fr;
+  gap: 0ellos 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". HEADER-CONTAINER ." ". MAINCONTAINER ." ". NUESTRA-MARCA .";
+}
+.MAINCONTAINER {
+  display: grid;
+  grid-template-columns: 1.7fr 0.1fr;
+  grid-template-rows: 1fr 2fr 0.1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". ." ". ." ". .";
+  grid-area: MAINCONTAINER;
+}
+.HEADER-CONTAINER {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". . ." ". . ." ". . .";
+  grid-area: HEADER-CONTAINER;
+}
+.NUESTRA-MARCA {
+  grid-area: NUESTRA-MARCA;
+}
+section {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+}
+section div {
+  border: 1px solid 
+}
+#contenedor {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-areas: "encabezado" "principal" "publicidad" "pie" 
+}
+header, main, aside, footer {
+  border: 1px solid 
+}
+header {
+  grid-area: encabezado;
+}
+main {
+  grid-area: principal;
+}
+aside {
+  grid-area: publicidad;
+  display: none;
+}
+footer {
+  grid-area: pie 
+}
+footer ul {
+  list-style: none;
+  display:flex;
+}
+.MAINCONTAINER {
+  display: grid;
+  grid-template-columns: 1.7fr 0.1fr;
+  grid-template-rows: 1fr 2fr 0.1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". ." ". ." ". .";
+  grid-area: MAINCONTAINER;
+}
+.HEADER-CONTAINER {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". . ." ". . ." ". . .";
+  grid-area: HEADER-CONTAINER;
+}
+.NUESTRA-MARCA {
+  grid-area: NUESTRA-MARCA;
+}
+section {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+}
+section div {
+  border: 1px solid 
+}
 h1 {
   text-align: center;
   font-family:monospace;
@@ -178,50 +133,44 @@ h1 {
   border-left: 1px solid #000;
   animation: escribir 5s steps(30) alternate;
 }
-
 @keyframes escribir {
-    from { width: 100% }
-    to { width:0 }
+  from {
+      width: 100% 
+ }
+  to {
+      width:0 
+ }
 }
-
-
 p {
- font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-color: #a83b0bce;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #a83b0bce;
 }
-
 main {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-color: #a83b0bce;
+  color: #a83b0bce;
 }
-
 aside {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: #a83b0bce;
 }
-
 footer {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: #a83b0bce;
 }
-
 .banner{
-    width: 100%; 
-    height: 512px;
- }
-  
- .menu{
+  width: 100%;
+  height: 512px;
+}
+.menu{
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #cf9c85;
 }
-
 .menu li {
   float: left;
 }
-
 .menu li a {
   display: block;
   color:#a05c3f;
@@ -230,58 +179,44 @@ footer {
   text-decoration: none;
   font-family: 'Water Brush', cursive;
 }
-
 /* Change the link color to #111 (black) on hover */
 .menu li a:hover {
   background-color:#cf9c85;
 }
-
 .menu .active {
   background-color: #e70c72;
   color: #ffffff;
 }
-
-
 body#contacto {
- background-image:url(../imagenes/buzon.jpg);
+  background-image:url(../imagenes/buzon.jpg);
 }
-
 body#MirayEscucha {
   background-image:url(../imagenes/fondo-mira.jpg);
 }
-
 body#NoEstasSolo {
   background-image: url(../imagenes/solofondo.jpg);
 }
-
 body#personas {
   background-image: url(../imagenes/fondocontacto.jpg);
 }
-
 .abzurdah {
-width: 100%; 
-    height: 512px;
+  width: 100%;
+  height: 512px;
 }
-
 body#solucion {
   background-image: url(../imagenes/fondocontacto.jpg);
 }
-
 .form {
   text-align: center;
 }
-
-
-.textarea { 
-  width: 300px; 
-  height: 75px; 
+.textarea {
+  width: 300px;
+  height: 75px;
 }
-
 .cerebro {
   display: flex;
   justify-content: center;
 }
-
 .form {
   width: 100%;
   max-width: 600px;
@@ -291,13 +226,11 @@ body#solucion {
   justify-content: center;
   align-items: center;
 }
-
 .form input {
   width: 90%;
   height: 30px;
   margin: 0.5rem;
 }
-
 .social-networks a {
   display: inline-flex;
   color: #ffffff;
@@ -310,163 +243,133 @@ body#solucion {
   border-radius: 50%;
   margin: 0 6px;
   transition: transform 0.4s;
-  
 }
-
 .social-networks a:hover {
   transform: scale(1.3);
 }
-
 .social-networks a.facebook {
   background-color: #3c70a4;
 }
-
 .social-networks a.google {
   background-color: #ee4540;
 }
-
 .social-networks a.instagram {
   background-color: #bb7171;
 }
-
-/*
-@media screen and (min-width: 320px) {}
-
-@media screen and (min-width: 480px) {}
-
-@media screen and (min-width: 600px) {}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (min-width: 1024px) {}
-
-@media screen and (min-width: 1200px) {}
+/* @media screen and (min-width: 320px) {
+}
+@media screen and (min-width: 480px) {
+}
+@media screen and (min-width: 600px) {
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1024px) {
+}
+@media screen and (min-width: 1200px) {
+}
 */
 @media screen and (min-width: 576px){
- .body{
-  background-image: url(../imagenes/fondo.png);
-  background-repeat: no-repeat;
-}
- 
-#menufirst {
-  display: inline;
-}
-
-#menu{
-  display:none;
-}  /*navbar-nav para first mobile sera menú hamnurguesa con boostrap */
-
-aside ul li {
-  padding: 2px;
-  margin-left: -20px;
-  grid-area: aside;
-}
-
-#contenedor{
-  grid-area:contenedor;
-}
-
-.footer {
-  grid-area: footer;
-}
-
-#section {
-  grid-area: section;
-}
-
-#video {
-  grid-area: video;
-}
-
-#form {
-  grid-area:form;
-}
-
-@media screen and (min-width: 1200px){
   .body{
-    background-image: url(../imagenes/fondo.png);
-      background-position: center center;
-      background-size: cover;
+      background-image: url(../imagenes/fondo.png);
       background-repeat: no-repeat;
-      background-attachment: fixed;
-      padding: 30px;
+ }
+  #menufirst {
       display: inline;
-  
-  }  
- 
-  #menufirst{
-   display: none;
-  }
-  
+ }
   #menu{
- display:inline;
-  grid-area: ulnav;
-  }
-  
-  .menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #cf9c85;
-  }
-  
-  .menu li {
-    float: left;
-  }
-  
-  .menu li a {
-    display: block;
-    color:#a05c3f;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: 'Water Brush', cursive;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  .menu li a:hover {
-    background-color:#cf9c85;
-  }
-  
-  .menu .active {
-    background-color: #e70c72;
-    color: #ffffff;
-  }
-}
-
-aside ul li {
-  padding: 2px;
-  margin-left: -20px;
-  grid-area: aside;
-}
-
-#contenedor{
-  grid-area:contenedor;
-}
-
-.footer {
-  grid-area: footer;
-}
-
-#section {
-  grid-area: section;
-}
-
-#video {
-  grid-area: video;
-}
-
-#imagen {
-  grid-area:imagen; 
-}
-
-#form {
-  grid-area:form;
-}
-
-.banner{
-  width: 100%; 
-  height: 512px;
-}
+      display:none;
+ }
+ /*navbar-nav para first mobile sera menú hamnurguesa con boostrap */
+  aside ul li {
+      padding: 2px;
+      margin-left: -20px;
+      grid-area: aside;
+ }
+  #contenedor{
+      grid-area:contenedor;
+ }
+  .footer {
+      grid-area: footer;
+ }
+  #section {
+      grid-area: section;
+ }
+  #video {
+      grid-area: video;
+ }
+  #form {
+      grid-area:form;
+ }
+  @media screen and (min-width: 1200px){
+      .body{
+          background-image: url(../imagenes/fondo.png);
+          background-position: center center;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          padding: 30px;
+          display: inline;
+     }
+      #menufirst{
+          display: none;
+     }
+      #menu{
+          display:inline;
+          grid-area: ulnav;
+     }
+      .menu {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #cf9c85;
+     }
+      .menu li {
+          float: left;
+     }
+      .menu li a {
+          display: block;
+          color:#a05c3f;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-family: 'Water Brush', cursive;
+     }
+     /* Change the link color to #111 (black) on hover */
+      .menu li a:hover {
+          background-color:#cf9c85;
+     }
+      .menu .active {
+          background-color: #e70c72;
+          color: #ffffff;
+     }
+ }
+  aside ul li {
+      padding: 2px;
+      margin-left: -20px;
+      grid-area: aside;
+ }
+  #contenedor{
+      grid-area:contenedor;
+ }
+  .footer {
+      grid-area: footer;
+ }
+  #section {
+      grid-area: section;
+ }
+  #video {
+      grid-area: video;
+ }
+  #imagen {
+      grid-area:imagen;
+ }
+  #form {
+      grid-area:form;
+ }
+  .banner{
+      width: 100%;
+      height: 512px;
+ }
 }
