--- a/css/fondo_menu.css
+++ b/css/fondo_menu.css
@@ -2,8 +2,38 @@ body {
   background-image: url(../imagenes/fondo.png);
   background-size: cover;
   position: relative;
-  
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
 }
+
+  
+h1 {
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 2rem;
+  margin: 0 auto;
+  font-family: "Courier New";
+  border-right: 0.15em solid #13181a;
+  animation: typing 4s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
+  color: #000000;
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+h1#solucion
 
 body#solucion .contenedor {
   display: flex;
@@ -37,45 +67,7 @@ section div {
   grid-auto-flow: row;
   grid-template-areas: ". HEADER-CONTAINER ." ". MAINCONTAINER ." ". NUESTRA-MARCA .";
 }
-.MAINCONTAINER {
-  display: grid;
-  grid-template-columns: 1.7fr 0.1fr;
-  grid-template-rows: 1fr 2fr 0.1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: ". ." ". ." ". .";
-  grid-area: MAINCONTAINER;
-}
-.HEADER-CONTAINER {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: ". . ." ". . ." ". . .";
-  grid-area: HEADER-CONTAINER;
-}
-.NUESTRA-MARCA {
-  grid-area: NUESTRA-MARCA;
-}
-section {
-  display: grid;
-  grid-template-columns: repeat(4, 25%);
-}
-section div {
-  border: 1px solid 
-}
-#contenedor {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-areas: "encabezado" "principal" "publicidad" "pie" 
-}
-header, main, aside, footer {
-  border: 1px solid 
-}
-header {
-  grid-area: encabezado;
-}
+
 main {
   grid-area: principal;
 }
